REDO-389 fix arrows on firefox and safari

--- a/source/css/scss/app/loan-figure.scss
+++ b/source/css/scss/app/loan-figure.scss
@@ -43,7 +43,7 @@
   .carousel-prev {
     left: 0;
 
-    svg {
+    .icon {
       transform: rotate(270deg);
     }
   }
@@ -51,7 +51,7 @@
   .carousel-next {
     right: 0;
 
-    svg {
+    .icon {
       transform: rotate(90deg);
     }
   }
